--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.8.0",
+    "@3rdweb/react": "^1.8.1",
+    "@3rdweb/sdk": "^1.36.11",
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
@@ -20,5 +25,6 @@
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.16"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
