--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.8.0",
     "@3rdweb/react": "^1.8.1",
-    "@3rdweb/sdk": "^1.36.11",
+    "@3rdweb/sdk": "^1.36.9",
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
     "ethers": "^5.5.3",
-    "next": "12.0.8",
+    "next": "^12.0.9",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.0",
     "react-modal": "^3.14.4",
+    "react-spinners": "^0.11.0",
+    "spinners-react": "^1.0.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
